[fix] mobile layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,9 @@ body {
 /* hide scrollbars but keep scrolling */
 html {
 	scrollbar-width: none;
+	overflow-x: clip;
 }
+body { overflow-x: clip; }
 html::-webkit-scrollbar,
 body::-webkit-scrollbar {
 	width: 0;
